# aistyle

./: .gitignore  README.md  init.md  main.py  pyproject.toml  run.py  setup.sh  start.sh
static/css/: style.css
static/js/: app.js
templates/: index.html
