[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "html-transformer"
version = "0.1.0"
description = "Web app for transforming HTML while preserving similar styling"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "markdown>=3.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"